src/main/kubernetes/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - port: 8080
      name: api-svc-port
      targetPort: api-port
